kubernetes/catalog/bookstack/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app.kubernetes.io/name: bookstack
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bookstack.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: bookstack
          port: 80
  tls: {}
